added update  customer pasword api
